# observability-studio

./: .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/rules/: api.md  backend.md  frontend.md
accelerators/: __init__.py
accelerators/obscrawl/: __init__.py  service.py
accelerators/observascore/: __init__.py  cli.py
accelerators/rca-agent/: README.md  requirements.txt
backend/: requirements.txt
backend/app/: main.py  schemas.py
config/: config.example.yaml
examples/: demo_offline.py
exporters/: __init__.py
exports/: observascore-export-astronomy-shop-demo-azure-lab-20260412-0344.xlsx  observascore-export-astronomy-shop-demo-azure-lab-20260412-0922.xlsx  observascore-export-astronomy-shop-demo-azure-lab-20260414-1128.xlsx  observascore-export-demo-bank-lab-20260412-0315.xlsx
integrations/: __init__.py
observascore/: cli.py
observascore/adapters/: __init__.py  appdynamics.py  base.py  otel_collector.py  prometheus.py  tempo.py
observascore/ai/: __init__.py  analyst.py
observascore/engine/: scoring.py
observascore/export/: __init__.py
observascore/model/: __init__.py
observascore/report/: __init__.py  generator.py
platform/: __init__.py
shared_core/: __init__.py  accelerator_registry.py
studio-platform/: __init__.py
studio_platform/: __init__.py
tests/: test_incident_simulator.py  test_observability_gap_map.py  test_red_panel_intelligence.py  test_smoke.py
ui/: Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.jsx  (+3 more)
(+121 files in other folders)
